# langauge

./: CMakeLists.txt  TODO.md  main.cpp  readme.md  shell.nix
examples/: cmp.w  cmp.wbc  function.w  function.wbc  hello.w  hello.wbc  loop.w  loop.wbc  math.w  math.wbc  vars.w  vars.wbc
examples/test/: main.w  main.wbc
llvmTests/: main.c  main.ll  output.ll  test.h
src/: codegen.cpp  codegen.h  parseHelpers.h  tokens.h
src/include/: include.cpp
src/lexer/: lexer.cpp  lexer.h
src/parser/: functions.cpp  functions.h  line.h  parser.cpp  parser.h
